--- a/src/Components/RecipeCard.css
+++ b/src/Components/RecipeCard.css
@@ -101,3 +101,16 @@
     text-overflow: ellipsis;
     letter-spacing: -1px;
 }
+
+.left-pos-card {
+    position: absolute;
+    right: 0;
+    background-color: #fc5b69;
+    color: #fff;
+    border-width: 0;
+    border-radius: 7px;
+    width: 25px;
+    height: 25px;
+    margin-top: 15px;
+    margin-right: 15px;
+}
