--- a/src/Pages/HomePage.css
+++ b/src/Pages/HomePage.css
@@ -139,3 +139,11 @@ h1::selection {
         width: 100%;
     }
 }
+
+.loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    /* transform: translate(-50%, -50%); */
+    z-index: 1;
+}
